# MangaColor-Banana

./: .gitignore  README.md
.github/DISCUSSION_TEMPLATE/: QA.yml  ideas.yml  show.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
backend/: .env.example  build.py  main.py  pyproject.toml  requirements.txt
backend/app/: __init__.py
backend/app/api/: __init__.py  routes.py  websocket.py
backend/app/models/: schemas.py
backend/app/services/: __init__.py  batch_processor.py  gemini_service.py  pdf_service.py  state_manager.py
frontend/: .eslintrc.cjs  electron-builder.yml  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/main/: index.ts  preload.ts
frontend/src/renderer/: App.tsx  main.tsx
frontend/src/renderer/components/: BatchCheckpointModal.tsx  ControlPanel.tsx  FileUploader.tsx  Header.tsx  ImageStream.tsx  MainContent.tsx  PromptEditor.tsx  ResumeModal.tsx  Sidebar.tsx  WelcomeGuide.tsx
frontend/src/renderer/hooks/: useApi.ts  useCheckpoint.ts  useErrorHandler.ts  useWebSocket.ts
frontend/src/renderer/store/: appStore.ts
frontend/src/renderer/styles/: index.css
frontend/src/shared/: types.ts
